--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   :root{--bg:#0B0F19;--ink:#E6EAF2;--accent:#A4E8FF;--muted:#94A3B8}
   body{margin:0;background:var(--bg);color:var(--ink);font:16px/1.6 ui-sans-serif,system-ui;
        max-width:760px;padding:24px;margin:auto;text-align:center}
-  a{color:var(--accent);text-decoration:none} a:hover{text-decoration:underline}
-  ul{list-style:none;padding:0;margin:1rem 0} li{margin:.5rem 0}
+  a{color:var(--accent);text-decoration:none}
+  a:hover{text-decoration:underline}
   footer{margin-top:2rem;color:var(--muted);font-size:.9rem}
 </style>
 </head>
